[package]
name = "rust-yew-todomvc-app"
version = "1.0.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.6"
web-sys = "0.3"
yew = "0.19.3"